# self-dojo

./: .gitignore  Cargo.toml  dojo  install.sh
src/: db.rs  main.rs  ollama.rs  parse.rs  sync.rs  types.rs
