[package]
name = "dojo-engine"
version = "0.1.0"
edition = "2021"
description = "Rust engine for self-dojo — a low-friction AuDHD-aware journaling tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
regex = "1"

[features]
default = ["ollama", "sync"]
ollama = ["dep:reqwest"]
sync = ["dep:reqwest"]
